--- a/deb/openmediavault-usbbackup/debian/control
+++ b/deb/openmediavault-usbbackup/debian/control
@@ -10,6 +10,6 @@ Package: openmediavault-usbbackup
 Architecture: all
 Depends: udev, rsync, openmediavault (>= 0.4.20)
 Priority: optional
-Description: OpenMediaVault USB syncronisation plugin
- Adds the ability to automatically syncronise a shared folder to an USB
- stick when it is plugged in.
+Description: OpenMediaVault USB backup plugin
+ Automatically synchronise a shared folder to an USB stick when it is
+ plugged in.
