--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -18,7 +18,7 @@ Depends: libjs-extjs3, apache2, apache2-suexec, libapache2-mod-fcgid, php5-cgi,
  iptables, monit, acpid, beep, gdisk, rrdtool, collectd, cron, anacron,
  cron-apt, quota, quotatool, whiptail, lvm2, watchdog, ca-certificates, perl,
  libjson-perl, liblocale-po-perl, libjavascript-minifier-perl, coreutils,
- xmlstarlet (>= 1.3.1), parted, bash
+ xmlstarlet (>= 1.3.1), parted, bash, diffutils
 Description: Open network attached storage solution
  OpenMediaVault is a small and simple to use network attached storage system with
  a smart WebGUI.
