--- a/deb/openmediavault-usbbackup/debian/control
+++ b/deb/openmediavault-usbbackup/debian/control
@@ -11,5 +11,5 @@ Architecture: all
 Depends: udev, rsync, openmediavault (>= 0.4.23)
 Priority: optional
 Description: OpenMediaVault USB backup plugin
- Automatically synchronise a shared folder to an USB stick when it is
- plugged in.
+ Automatically synchronise a shared folder to an USB stick and vice verse
+ when it is plugged in.
