Modify message in release upgrade script.

--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -8,8 +8,8 @@ Homepage: http://www.openmediavault.org
 
 Package: openmediavault
 Architecture: all
-Depends: libjs-extjs3, apache2, apache2-suexec, libapache2-mod-fcgid, php5-cgi,
- php5-cli, php5-pam, php-json-schema, sudo, ethtool, acl, ifenslave,
+Depends: libjs-extjs3 (>= 3.4.0), apache2, apache2-suexec, libapache2-mod-fcgid,
+ php5-cgi, php5-cli, php5-pam, php-json-schema, sudo, ethtool, acl, ifenslave,
  resolvconf, iproute, xfsprogs, jfsutils, ntfs-3g, hdparm, sdparm,
  ifupdown, mdadm, postfix, libsasl2-modules, bsd-mailx, ntp, cpufrequtils,
  rsyslog, smartmontools, openssl, openssh-server, openssh-blacklist-extra,
