--- a/deb/shairport/debian/control
+++ b/deb/shairport/debian/control
@@ -3,15 +3,17 @@ Section: sound
 Priority: optional
 Maintainer: Volker Theile <volker.theile@openmediavault.org>
 Build-Depends: debhelper (>= 7), libavahi-client-dev, libssl-dev,
- libasound2-dev [linux-any], git-core
+ libasound2-dev [linux-any], libdaemon-dev, libpopt-dev
 Standards-Version: 3.9.4
-Homepage: https://github.com/abrasive/shairport
+Homepage: https://github.com/mikebrady/shairport-sync
 
 Package: shairport
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, avahi-daemon
 Description: An AirPlay-compatible audio receiver
  This program emulates an AirPort Express for the purpose of streaming
- music from iTunes and compatible iPods and iPhones. It implements a
- server for the Apple RAOP protocol. ShairPort does not support AirPlay
- v2 (video and photo streaming).
+ audio from iTunes, iPods, iPhones, iPads and AppleTVs. Audio played by
+ a Shairport Sync-powered device stays synchronised with the source and
+ hence with similar devices playing the same source. Thus, for example,
+ synchronised multi-room audio is possible without difficulty.
+ This program does not support AirPlay video or photo streaming.
