--- a/deb/openmediavault/debian/rules
+++ b/deb/openmediavault/debian/rules
@@ -1,41 +1,12 @@
 #!/usr/bin/make -f
 
-# Documentation/Howto:
-# http://www.debian.org/doc/manuals/maint-guide/dother.en.html#install
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
 
-include ../openmediavault.mk
+%:
+	dh $@
 
-clean:
-	dh_testdir
-	dh_testroot
-	dh_clean
-
-install:
-	dh_testdir
-	dh_testroot
-	dh_prep
-	dh_installdirs
-	dh_install
-
-binary-indep: install omv_clean_scm
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs
-	dh_installdebconf
+override_dh_installinit:
 	dh_installinit -r --no-start --name=openmediavault
 	dh_installinit -r --no-start --name=openmediavault-beep
 	dh_installinit -r --no-start --name=openmediavault-engined
-	dh_lintian
-	dh_link
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary-arch:
-# We have nothing to do by default.
-
-binary: binary-indep binary-arch
-.PHONY: clean binary-indep binary-arch binary install
