--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -20,7 +20,8 @@ Depends: ${perl:Depends}, libjs-extjs5 (>= 5.1.1), php5-fpm, libpam-modules,
  ca-certificates, perl, libjson-perl, liblocale-po-perl, proftpd-mod-vroot,
  libjavascript-minifier-xs-perl, coreutils, xmlstarlet (>= 1.3.1),
  php5-proctitle, parted, bash, diffutils, lsof, socat, rrdcached,
- nginx (>= 1.2.1), bash-completion, python3, python3-apt, pm-utils
+ nginx (>= 1.2.1), bash-completion, python3, python3-apt, pm-utils,
+ wpasupplicant
 Description: Open network attached storage solution
  OpenMediaVault is a small and simple to use network attached storage system with
  a smart WebGUI.
