--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -18,7 +18,7 @@ Depends: ${perl:Depends}, libjs-extjs5 (>= 5.1.1), php5-fpm, libpam-modules,
  iptables, monit (>= 5.4), acpid, beep, gdisk, rrdtool, collectd (>= 5.1.0),
  cron, anacron, cron-apt, quota, quotatool, whiptail, lvm2, watchdog,
  ca-certificates, perl, libjson-perl, liblocale-po-perl, proftpd-mod-vroot,
- libjavascript-minifier-xs-perl, coreutils, xmlstarlet (>= 1.3.1),
+ libjavascript-minifier-xs-perl, coreutils, xmlstarlet (>= 1.3.1), mount,
  php5-proctitle, parted, bash, diffutils, lsof, socat, rrdcached,
  nginx (>= 1.2.1), bash-completion, python3, python3-apt, pm-utils,
  wpasupplicant
