Update shairport-sync to 2.4.1.

--- a/deb/shairport-sync/debian/control
+++ b/deb/shairport-sync/debian/control
@@ -3,7 +3,8 @@ Section: sound
 Priority: optional
 Maintainer: Volker Theile <volker.theile@openmediavault.org>
 Build-Depends: debhelper (>= 7), libavahi-client-dev, libssl-dev,
- libasound2-dev [linux-any], libdaemon-dev, libpopt-dev
+ libasound2-dev [linux-any], libdaemon-dev, libpopt-dev, libconfig-dev,
+ autoconf, libtool
 Standards-Version: 3.9.4
 Homepage: https://github.com/mikebrady/shairport-sync
 
