--- a/deb/openmediavault-clamav/debian/control
+++ b/deb/openmediavault-clamav/debian/control
@@ -9,8 +9,7 @@ Homepage: http://www.openmediavault.org
 
 Package: openmediavault-clamav
 Architecture: all
-Depends: openmediavault (>= 2.1.9), clamav-daemon (>= 0.98.1),
- clamav-freshclam (>= 0.98.1)
+Depends: openmediavault (>= 3.0), clamav-daemon, clamav-freshclam
 Priority: optional
 Description: OpenMediaVault ClamAV plugin
  Clam AntiVirus is an anti-virus toolkit for Unix.
