--- a/deb/openmediavault-iscsitarget/debian/control
+++ b/deb/openmediavault-iscsitarget/debian/control
@@ -10,7 +10,7 @@ Homepage: http://www.openmediavault.org
 Package: openmediavault-iscsitarget
 Architecture: all
 Depends: openmediavault (>= 3.0), iscsitarget, iscsitarget-dkms,
- linux-headers | linux-headers-3.2.0-4-all | linux-headers-3.16.0-0.bpo.4-all
+ linux-headers-3.16.0-4-all
 Priority: optional
 Description: OpenMediaVault iSCSI Enterprise Target plugin
  iSCSI Enterprise Target is for building an iSCSI storage system on Linux.
