--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -12,7 +12,7 @@ Depends: ${perl:Depends}, libjs-extjs5 (>= 5.1.1), php5-fpm, libpam-modules,
  php5-cgi, php5-cli (>= 5.6), php5-pam, php-json-schema, sudo, ethtool,
  acl, ifenslave, resolvconf, iproute, xfsprogs, jfsutils, ntfs-3g, hdparm,
  sdparm, bootlogd, ifupdown, mdadm, postfix, libsasl2-modules, bsd-mailx,
- cpufrequtils, rsyslog, smartmontools, openssl, openssh-server,
+ cpufrequtils, rsyslog, logrotate, smartmontools, openssl, openssh-server,
  openssh-blacklist-extra, uuid, tzdata, nfs-kernel-server, proftpd-basic,
  wget, tftpd-hpa, util-linux, samba, samba-common-bin, rsync, apt-utils,
  snmpd, avahi-daemon, libnss-mdns, iptables, monit (>= 5.4), acpid, beep,
