* Use deb-systemd-{helper,invoke} in package scripts * Various improvements

--- a/deb/openmediavault-netatalk/debian/control
+++ b/deb/openmediavault-netatalk/debian/control
@@ -9,7 +9,7 @@ Homepage: http://www.openmediavault.org
 
 Package: openmediavault-netatalk
 Architecture: all
-Depends: openmediavault (>= 3.0), netatalk
+Depends: openmediavault (>= 3.0), netatalk, init-system-helpers
 Priority: optional
 Description: OpenMediaVault netatalk (AppleTalk Protocol Suite) plugin
  Netatalk is an implementation of the AppleTalk Protocol Suite.
