--- a/deb/openmediavault-clamav/debian/control
+++ b/deb/openmediavault-clamav/debian/control
@@ -9,7 +9,8 @@ Homepage: http://www.openmediavault.org
 
 Package: openmediavault-clamav
 Architecture: all
-Depends: openmediavault (>= 3.0), clamav-daemon, clamav-freshclam, clamdscan
+Depends: openmediavault (>= 3.0), clamav-daemon, clamav-freshclam, clamdscan,
+ init-system-helpers
 Priority: optional
 Description: OpenMediaVault ClamAV plugin
  Clam AntiVirus is an anti-virus toolkit for Unix.
