--- a/deb/openmediavault/debian/openmediavault.openmediavault-beep-up.service
+++ b/deb/openmediavault/debian/openmediavault.openmediavault-beep-up.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Beep after system start
 DefaultDependencies=no
-After=graphical.target
+After=multi-user.target
 
 [Service]
 Type=oneshot
@@ -9,4 +9,4 @@ ExecStart=/usr/bin/beep -f 3000 -l 100 -n -f 3500 -l 100 -r 2
 ExecStop=/bin/true
 
 [Install]
-WantedBy=graphical.target multi-user.target
+WantedBy=multi-user.target
