--- a/deb/openmediavault/debian/openmediavault.openmediavault-cleanup-php.service
+++ b/deb/openmediavault/debian/openmediavault.openmediavault-cleanup-php.service
@@ -1,11 +1,11 @@
 [Unit]
 Description=Cleanup PHP session files
 DefaultDependencies=no
-Before=nginx.service
+After=local-fs.target
 
 [Service]
 Type=oneshot
-ExecStart=rm -f /var/lib/php5/sessions/*
+ExecStart=/bin/rm -f /var/lib/php5/sessions/*
 ExecStop=/bin/true
 
 [Install]
