--- a/deb/openmediavault/debian/openmediavault.openmediavault-cleanup-php.service
+++ b/deb/openmediavault/debian/openmediavault.openmediavault-cleanup-php.service
@@ -2,6 +2,7 @@
 Description=Cleanup PHP session files
 DefaultDependencies=no
 After=local-fs.target
+Before=nginx.service
 
 [Service]
 Type=oneshot
