--- a/deb/openmediavault/debian/openmediavault.openmediavault-engined.service
+++ b/deb/openmediavault/debian/openmediavault.openmediavault-engined.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=The OpenMediaVault engine daemon that processes the RPC request
-After=sysinit.target
+After=local-fs.target network.target
 
 [Service]
 Type=forking
