Introduce various users/groups.
openmediavault-config:
Members of this groud are allowed to read/write the /etc/openmediavault/config.xml file.

openmediavault-engined:
Members of this group are allowed to communicate with the omv-engined via the socket.

openmediavault-webgui:
The user/group which is used for running the webgui.

--- a/deb/openmediavault/etc/php5/fpm/pool.d/openmediavault-webgui.conf
+++ b/deb/openmediavault/etc/php5/fpm/pool.d/openmediavault-webgui.conf
@@ -1,6 +1,6 @@
 [openmediavault-webgui]
-user = openmediavault
-group = openmediavault
+user = openmediavault-webgui
+group = openmediavault-webgui
 
 listen = /var/run/php5-fpm-openmediavault-webgui.sock
 listen.owner = www-data
