--- a/deb/openmediavault/etc/php5/fpm/pool.d/openmediavault-webgui.conf
+++ b/deb/openmediavault/etc/php5/fpm/pool.d/openmediavault-webgui.conf
@@ -37,7 +37,7 @@ php_value[expose_php] = Off
 
 ; Name of the session (used as cookie name).
 ; http://php.net/session.name
-php_value[session.name] = OMVSESSID
+php_value[session.name] = X-OPENMEDIAVAULT-SESSIONID
 
 ; Default timeout for socket based streams (seconds)
 ; http://php.net/default-socket-timeout
