Improve openmediavault-engined systemd unit file to fix an issue that concerns the plugin add/remove procedure. Thanks to subzero79.

--- a/deb/openmediavault/debian/openmediavault.openmediavault-engined.service
+++ b/deb/openmediavault/debian/openmediavault.openmediavault-engined.service
@@ -4,6 +4,7 @@ After=local-fs.target network.target
 
 [Service]
 Type=forking
+KillMode=process
 PIDFile=/var/run/omv-engined.pid
 ExecStart=/usr/sbin/omv-engined
 
