--- a/deb/openmediavault/debian/doxygen.conf
+++ b/deb/openmediavault/debian/doxygen.conf
@@ -32,7 +32,7 @@ PROJECT_NAME           = "OpenMediaVault"
 # This could be handy for archiving the generated documentation or
 # if some version control system is used.
 
-PROJECT_NUMBER         = "0.6 (Kralizec)"
+PROJECT_NUMBER         = "3.0 (Erasmus)"
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description
 # for a project that appears at the top of each page and should give viewer
@@ -193,7 +193,8 @@ TAB_SIZE               = 8
 # will result in a user-defined paragraph with heading "Side Effects:".
 # You can put \n's in the value part of an alias to insert newlines.
 
-ALIASES                = "license=@par License:\n"
+ALIASES                += "license=@par License:\n"
+ALIASES                += "derived=@extends"
 
 # This tag can be used to specify a number of word-keyword mappings (TCL only).
 # A mapping has the form "name=value". For example adding
