Mantis 0001505: USB Backup plugin script timeout

--- a/deb/openmediavault-usbbackup/debian/rules
+++ b/deb/openmediavault-usbbackup/debian/rules
@@ -6,4 +6,10 @@
 include ../openmediavault.mk
 
 %:
-	dh $@
+	dh $@ --with systemd
+
+override_dh_systemd_enable:
+	dh_systemd_enable --name=openmediavault-usbbackup-automountfs@
+
+override_dh_systemd_start:
+	dh_systemd_start -r --no-start --name=openmediavault-usbbackup-automountfs@
