--- a/deb/openmediavault-iscsitarget/debian/control
+++ b/deb/openmediavault-iscsitarget/debian/control
@@ -10,8 +10,10 @@ Homepage: http://www.openmediavault.org
 Package: openmediavault-iscsitarget
 Architecture: all
 Depends: openmediavault (>= 3.0.25), iscsitarget, iscsitarget-dkms,
- linux-headers-3.16.0-4-all | linux-headers-4.5.0-0.bpo.2-all |
- linux-headers-4.6.0-0.bpo.1-all
+ linux-headers-amd64 | linux-headers-armel | linux-headers-armhf |
+ linux-headers-i386 | linux-headers-mips | linux-headers-mipsel |
+ linux-headers-powerpc | linux-headers-ppc64el | linux-headers-s390 |
+ linux-headers-s390x | linux-headers-sparc
 Priority: optional
 Description: OpenMediaVault iSCSI Enterprise Target plugin
  iSCSI Enterprise Target is for building an iSCSI storage system on Linux.
