--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -22,7 +22,8 @@ Depends: ${perl:Depends}, libjs-extjs5 (>= 5.1.1), php5-fpm, libpam-modules,
  coreutils, xmlstarlet (>= 1.6.1), mount, parted, bash, diffutils, lsof,
  socat, rrdcached, locales, nginx (>= 1.6.2), bash-completion, python3,
  python3-apt, pm-utils, wpasupplicant, systemd, systemd-sysv, btrfs-tools,
- samba-vfs-modules, pciutils, python3-pyudev, python3-natsort, ${misc:Depends}
+ samba-vfs-modules, pciutils, python3-pyudev, python3-natsort,
+ python3-netifaces, ${misc:Depends}
 Description: Open network attached storage solution
  OpenMediaVault is a small and simple to use network attached storage system with
  a smart WebGUI.
