--- a/deb/openmediavault-netatalk/debian/control
+++ b/deb/openmediavault-netatalk/debian/control
@@ -9,7 +9,7 @@ Homepage: http://www.openmediavault.org
 
 Package: openmediavault-netatalk
 Architecture: all
-Depends: openmediavault (>= 3.0.21), netatalk, init-system-helpers
+Depends: openmediavault (>= 3.0.37), netatalk (>= 3.1.9)
 Priority: optional
 Description: OpenMediaVault netatalk (AppleTalk Protocol Suite) plugin
  Netatalk is an implementation of the AppleTalk Protocol Suite.
