--- a/deb/openmediavault/etc/rsyslog.d/openmediavault-smbd_audit.conf
+++ b/deb/openmediavault/etc/rsyslog.d/openmediavault-smbd_audit.conf
@@ -1,2 +1,2 @@
-if $programname == 'smbd' and $syslogfacility-text == 'local7' and $syslogpriority-text == 'notice' then /var/log/samba/audit.log
+if $programname == 'smbd_audit' and $syslogfacility-text == 'local7' and $syslogpriority-text == 'notice' then /var/log/samba/audit.log
 & ~
