* Various improvements and bugfixes. * Added a daily cron script which will email the administrator when there are locked/banned users. * Add module to omv-firstaid to reset the failed login attempt counter.

--- a/deb/openmediavault/etc/openmediavault/php.ini
+++ b/deb/openmediavault/etc/openmediavault/php.ini
@@ -1951,3 +1951,10 @@ ldap.max_links = -1
 ; Local Variables:
 ; tab-width: 4
 ; End:
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; openmediavault php.ini settings ;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+; Pam Authentication Support (see /etc/pam.d)
+pam.servicename = "openmediavault"
