--- a/deb/openmediavault/etc/php5/fpm/pool.d/openmediavault-webgui.conf
+++ b/deb/openmediavault/etc/php5/fpm/pool.d/openmediavault-webgui.conf
@@ -14,13 +14,13 @@ pm.process_idle_timeout = 10s
 chdir = /
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; OpenMediaVault php.ini settings ;
+; openmediavault php.ini settings ;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ; Paths and Directories
 php_value[include_path] = ".:/usr/share/php:/var/www/openmediavault"
 
-; Pam Authentication Support (see /etc/pam.d) ;
+; Pam Authentication Support (see /etc/pam.d)
 php_value[pam.servicename] = "openmediavault-webgui";
 
 ; Maximum allowed size for uploaded files.
