--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -22,7 +22,7 @@
 Vagrant.configure("2") do |config|
 	config.vm.box = "debian/jessie64"
 	config.vm.network "private_network", ip: "192.172.16.22"
-	config.vm.hostname = "omv3-box"
+	config.vm.hostname = "omv3box"
 	config.vm.provider :virtualbox do |prov|
 		prov.name = "omv3-box"
 		prov.memory = "2048"
@@ -30,5 +30,8 @@ Vagrant.configure("2") do |config|
 	config.vm.provider :libvirt do |prov|
 		prov.memory = "2048"
 	end
+	config.vm.synced_folder "../deb", "/home/vagrant/openmediavault",
+		:nfs => true,
+		:mount_options => ["nolock,vers=3,udp,noatime,actimeo=1"]
 	config.vm.provision :shell, :path => "bootstrap.sh"
 end
