--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -19,6 +19,8 @@
 # You should have received a copy of the GNU General Public License
 # along with openmediavault. If not, see <http://www.gnu.org/licenses/>.
 
+hostname = "omv3box"
+
 Vagrant.configure("2") do |config|
 	if ENV['DISTRO'] == "stretch"
 		# Debian 9/Stretch
@@ -34,13 +36,13 @@ Vagrant.configure("2") do |config|
 	end
 	config.vm.provision :shell, :path => "install.sh"
 	config.vm.network "private_network", ip: "192.172.16.22"
-	config.vm.hostname = "omv3box"
+	config.vm.hostname = hostname
 	config.vm.provider :virtualbox do |prov|
-		prov.name = "omv3box"
+		prov.name = hostname
 		prov.memory = "2048"
 		# Add some disks.
 		for i in 0..2 do
-			filename = "./disks/box-disk#{i}.vmdk"
+			filename = "./disks/#{hostname}-disk#{i}.vmdk"
 			unless File.exist?(filename)
 				prov.customize ["createhd", "--filename", filename,
 					"--size", 1000 * 1024]
