--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -20,6 +20,7 @@
 # along with openmediavault. If not, see <http://www.gnu.org/licenses/>.
 
 hostname = "omv3box"
+sata_controller_name = "SATA"
 
 Vagrant.configure("2") do |config|
 	if ENV['DISTRO'] == "stretch"
@@ -28,11 +29,8 @@ Vagrant.configure("2") do |config|
 	else
 		# Debian 8/Jessie
 		config.vm.box = "debian/jessie64"
-		# Rename the storage controller.
-		config.vm.provider :virtualbox do |prov|
-			prov.customize ["storagectl", :id, "--name", "SATA Controller",
-				"--rename", "SATA"]
-		end
+		# The SATA controller name is different in this box.
+		sata_controller_name = "SATA Controller"
 	end
 	config.vm.provision :shell, :path => "install.sh"
 	config.vm.network "private_network", ip: "192.172.16.22"
@@ -46,10 +44,10 @@ Vagrant.configure("2") do |config|
 			unless File.exist?(filename)
 				prov.customize ["createhd", "--filename", filename,
 					"--size", 1000 * 1024]
+				prov.customize ["storageattach", :id, "--storagectl",
+					sata_controller_name, "--port", i + 1, "--device", 0,
+					"--type", "hdd", "--medium", filename]
 			end
-			prov.customize ["storageattach", :id, "--storagectl",
-				"SATA", "--port", i + 1, "--device", 0,
-				"--type", "hdd", "--medium", filename]
 		end
 	end
 	config.vm.provider :libvirt do |prov|
