--- a/deb/openmediavault/debian/openmediavault.openmediavault-cleanup-php.service
+++ b/deb/openmediavault/debian/openmediavault.openmediavault-cleanup-php.service
@@ -2,11 +2,11 @@
 Description=Cleanup PHP session files
 DefaultDependencies=no
 After=local-fs.target
-Before=nginx.service
+Before=nginx.service php5-fpm.service
 
 [Service]
 Type=oneshot
-ExecStart=/bin/rm -f /var/lib/php5/sessions/*
+ExecStart=/usr/bin/find /var/lib/php5/sessions -type f -exec rm -rf {} \;
 
 [Install]
 WantedBy=multi-user.target
