--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -22,7 +22,7 @@ Depends: ${perl:Depends}, libjs-extjs5 (>= 5.1.1), php5-fpm, libpam-modules,
  coreutils, xmlstarlet (>= 1.6.1), mount, parted, bash, diffutils, lsof,
  socat, rrdcached, locales, nginx (>= 1.6.2), bash-completion, python3,
  python3-apt, pm-utils, wpasupplicant, systemd, systemd-sysv, btrfs-tools,
- samba-vfs-modules, pciutils, python3-pyudev, python3-natsort,
+ samba-vfs-modules, pciutils, python3-pyudev, python3-natsort, jq,
  python3-netifaces, udev, apt-transport-https, python3-lxml,
  python3-sysv-ipc, ${misc:Depends}
 Description: Open network attached storage solution
