--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -8,8 +8,8 @@ Homepage: http://www.openmediavault.org
 
 Package: openmediavault
 Architecture: all
-Depends: ${perl:Depends}, libjs-extjs5 (>= 5.1.1), php5-fpm, libpam-modules,
- php5-cgi, php5-cli (>= 5.6), php5-pam, sudo, ethtool, python3-dialog,
+Depends: ${perl:Depends}, libjs-extjs5 (>= 5.1.1), php-fpm, libpam-modules,
+ php-cgi, php-cli, php-pam, sudo, ethtool, python3-dialog,
  acl, ifenslave, resolvconf, iproute2, xfsprogs, jfsutils, ntfs-3g, hdparm,
  sdparm, ifupdown, mdadm, postfix, libsasl2-modules, bsd-mailx, python3-dbus,
  cpufrequtils, rsyslog, logrotate, smartmontools, openssl, openssh-server,
