* Add php-pam package for PHP7 * Remove php5-pam package.

--- a/deb/php-pam/debian/control
+++ b/deb/php-pam/debian/control
@@ -1,14 +1,14 @@
-Source: php5-pam
+Source: php-pam
 Section: web
 Priority: optional
 Maintainer: Volker Theile <volker.theile@openmediavault.org>
-Build-Depends: debhelper (>= 7), po-debconf, xsltproc, php5-dev, libpam-dev
+Build-Depends: debhelper (>= 7), po-debconf, xsltproc ,php-dev ,libpam-dev
 Standards-Version: 3.9.1
 
-Package: php5-pam
+Package: php-pam
 Architecture: any
-Depends: ${shlibs:Depends}, ${php:Depends}, ${misc:Depends}
-Description: pam module for PHP 5
+Depends: ${php:Depends}, ${misc:Depends}
+Description: pam module for PHP 7
  PAM integration
  .
  This extension provides PAM (Pluggable Authentication Modules)
@@ -16,5 +16,3 @@ Description: pam module for PHP 5
  authentication tasks of applications and services. The library
  provides a stable API for applications to defer to for authentication
  tasks.
-
-
