Update package dependencies.

--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -8,19 +8,19 @@ Homepage: http://www.openmediavault.org
 
 Package: openmediavault
 Architecture: all
-Depends: ${perl:Depends}, libjs-extjs5 (>= 5.1.1), php-fpm, libpam-modules,
+Depends: ${perl:Depends}, libjs-extjs5, php-fpm, libpam-modules,
  php-cgi, php-cli, php-pam, sudo, ethtool, python3-dialog,
  acl, ifenslave, resolvconf, iproute2, xfsprogs, jfsutils, ntfs-3g, hdparm,
  sdparm, ifupdown, mdadm, postfix, libsasl2-modules, bsd-mailx, python3-dbus,
  cpufrequtils, rsyslog, logrotate, smartmontools, openssl, openssh-server,
  openssh-blacklist-extra, uuid, tzdata, nfs-kernel-server, proftpd-basic,
  wget, tftpd-hpa, util-linux, samba, samba-common-bin, rsync, apt-utils,
- snmpd, avahi-daemon, libnss-mdns, iptables, monit (>= 5.4), acpid, beep,
- gdisk, rrdtool, collectd (>= 5.1.0), cron, anacron, cron-apt, quota,
+ snmpd, avahi-daemon, libnss-mdns, iptables, monit, acpid, beep,
+ gdisk, rrdtool, collectd, cron, anacron, cron-apt, quota,
  quotatool, whiptail, lvm2, watchdog, ca-certificates, perl, libjson-perl,
  liblocale-po-perl, proftpd-mod-vroot, libjavascript-minifier-xs-perl,
- coreutils, xmlstarlet (>= 1.6.1), mount, parted, bash, diffutils, lsof,
- socat, rrdcached, locales, nginx (>= 1.6.2), bash-completion, python3,
+ coreutils, xmlstarlet, mount, parted, bash, diffutils, lsof,
+ socat, rrdcached, locales, nginx, bash-completion, python3,
  python3-apt, pm-utils, wpasupplicant, systemd, systemd-sysv, btrfs-tools,
  samba-vfs-modules, pciutils, python3-pyudev, python3-natsort, jq,
  python3-netifaces, udev, apt-transport-https, python3-lxml,
