Add missing php-bcmath package dependency.

--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -15,7 +15,7 @@ Depends: ${perl:Depends}, libjs-extjs5, php-fpm, libpam-modules, php-json,
  cpufrequtils, rsyslog, logrotate, smartmontools, openssl, openssh-server,
  openssh-blacklist-extra, uuid, tzdata, nfs-kernel-server, proftpd-basic,
  wget, tftpd-hpa, util-linux, samba, samba-common-bin, rsync, apt-utils,
- snmpd, avahi-daemon, libnss-mdns, iptables, monit, acpid, beep,
+ snmpd, avahi-daemon, libnss-mdns, iptables, monit, acpid, beep, php-bcmath,
  gdisk, rrdtool, collectd, cron, anacron, cron-apt, quota,
  quotatool, whiptail, lvm2, watchdog, ca-certificates, perl, libjson-perl,
  liblocale-po-perl, proftpd-mod-vroot, libjavascript-minifier-xs-perl,
