--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -20,21 +20,11 @@
 # along with openmediavault. If not, see <http://www.gnu.org/licenses/>.
 
 # Default values.
-distro = ENV['DISTRO'] || "jessie"
-sata_controller_name = "SATA"
-hostname = "omv3#{distro}"
+hostname = "omv3jessie"
 
 Vagrant.configure("2") do |config|
-	case distro
-	when "stretch"
-		# Debian 9/Stretch
-		config.vm.box = "remram/debian-9-amd64"
-	else
-		# Debian 8/Jessie
-		config.vm.box = "debian/jessie64"
-		# The SATA controller name is different in this box.
-		sata_controller_name = "SATA Controller"
-	end
+	# Debian 8/Jessie
+	config.vm.box = "debian/jessie64"
 	config.vm.define hostname
 	config.vm.provision :shell, :path => "install.sh"
 	config.vm.network "private_network", ip: "192.172.16.22"
@@ -49,7 +39,7 @@ Vagrant.configure("2") do |config|
 				prov.customize ["createhd", "--filename", filename,
 					"--size", 1000 * 1024]
 				prov.customize ["storageattach", :id, "--storagectl",
-					sata_controller_name, "--port", i + 1, "--device", 0,
+					"SATA Controller", "--port", i + 1, "--device", 0,
 					"--type", "hdd", "--medium", filename]
 			end
 		end
