--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -23,8 +23,7 @@ Depends: ${perl:Depends}, libjs-extjs5, php-fpm, libpam-modules, php-json,
  socat, rrdcached, locales, nginx, bash-completion, python3,
  python3-apt, pm-utils, wpasupplicant, systemd, systemd-sysv, btrfs-tools,
  samba-vfs-modules, pciutils, python3-pyudev, python3-natsort, jq,
- python3-netifaces, udev, apt-transport-https, python3-lxml,
- python3-sysv-ipc, ${misc:Depends}
+ python3-netifaces, udev, apt-transport-https, python3-lxml, ${misc:Depends}
 Description: Open network attached storage solution
  OpenMediaVault is a small and simple to use network attached storage system with
  a smart WebGUI.
