--- a/deb/libjs-extjs5/debian/control
+++ b/deb/libjs-extjs5/debian/control
@@ -2,7 +2,7 @@ Source: libjs-extjs5
 Section: web
 Priority: extra
 Maintainer: Volker Theile <volker.theile@openmediavault.org>
-Build-Depends: debhelper (>= 9), unzip
+Build-Depends: debhelper (>= 9), unzip, quilt
 Standards-Version: 3.9.4
 Homepage: http://www.sencha.com
 
