--- a/deb/libjs-extjs6/debian/rules
+++ b/deb/libjs-extjs6/debian/rules
@@ -17,10 +17,7 @@ extract-stamp:
 	rm -rf $(CURDIR)/ext-$(EXTJSVERSION)
 	touch extract-stamp
 
-override_dh_quilt_patch: extract
-	dh_quilt_patch
-
-override_dh_auto_build:
+override_dh_auto_build: extract
 
 override_dh_prep:
 	dh_prep
