--- a/deb/libjs-extjs6/debian/rules
+++ b/deb/libjs-extjs6/debian/rules
@@ -21,14 +21,10 @@ override_dh_auto_build: extract
 
 override_dh_prep:
 	dh_prep
-	# Relocate files from <pkgname>/build/ to <pkgname>/.
-	find build/packages/ -type d -iname "build" -print0 | \
-	  for path in $$(xargs -0r); do \
-		  mv $$path/* $$path/..; \
-		  rm -rf $$path; \
-	  done
 	# Remove useless files.
-	find build/packages/ \( -iname "*.rb" -o -iname "*.scss" \
-	  -o -iname "*.md" \) -exec rm -r '{}' \;
+	for name in classic modern packages; do \
+		find build/$$name/ \( -iname "*.rb" -o -iname "*.scss" \
+			-o -iname "*.md" \) -exec rm -r '{}' \; ;\
+	done
 
 .PHONY: extract
