--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -21,7 +21,7 @@ Depends: ${perl:Depends}, libjs-extjs6, php-fpm, libpam-modules, php-json,
  liblocale-po-perl, proftpd-mod-vroot, libjavascript-minifier-xs-perl,
  coreutils, xmlstarlet, mount, parted, bash, diffutils, lsof,
  socat, rrdcached, locales, nginx, bash-completion, python3,
- python3-apt, pm-utils, wpasupplicant, systemd, systemd-sysv, btrfs-tools,
+ python3-apt, pm-utils, wpasupplicant, systemd, systemd-sysv, btrfs-progs,
  samba-vfs-modules, pciutils, python3-pyudev, python3-natsort, jq,
  python3-netifaces, udev, apt-transport-https, python3-lxml, ${misc:Depends}
 Description: Open network attached storage solution
