--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -22,7 +22,7 @@ Depends: ${perl:Depends}, libjs-extjs6, php-fpm, libpam-modules, php-json,
  coreutils, xmlstarlet, mount, parted, bash, diffutils, lsof,
  socat, rrdcached, locales, nginx, bash-completion, python3,
  python3-apt, pm-utils, wpasupplicant, systemd, systemd-sysv, btrfs-progs,
- samba-vfs-modules, pciutils, python3-pyudev, python3-natsort, jq,
+ samba-vfs-modules, pciutils, python3-pyudev, python3-natsort, jq, ntp,
  python3-netifaces, udev, apt-transport-https, python3-lxml, ${misc:Depends}
 Description: Open network attached storage solution
  OpenMediaVault is a small and simple to use network attached storage system with
