--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -36,7 +36,7 @@ Vagrant.configure("2") do |config|
 		for i in 0..2 do
 			filename = "./disks/#{hostname}-disk#{i}.vmdk"
 			unless File.exist?(filename)
-				prov.customize ["createhd", "--filename", filename,
+				prov.customize ["createmedium", "disk", "--filename", filename,
 					"--size", 1000 * 1024]
 				prov.customize ["storageattach", :id, "--storagectl",
 					"SATA Controller", "--port", i + 1, "--device", 0,
