--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -14,7 +14,7 @@ Depends: ${perl:Depends}, libjs-extjs6, php-fpm, libpam-modules, php-json,
  sdparm, ifupdown, mdadm, postfix, libsasl2-modules, bsd-mailx, python3-dbus,
  cpufrequtils, rsyslog, logrotate, smartmontools, openssl, openssh-server,
  openssh-blacklist-extra, uuid, tzdata, nfs-kernel-server, proftpd-basic,
- wget, tftpd-hpa, util-linux, samba, samba-common-bin, rsync, apt-utils,
+ wget, util-linux, samba, samba-common-bin, rsync, apt-utils,
  snmpd, avahi-daemon, libnss-mdns, iptables, monit, acpid, beep, php-bcmath,
  gdisk, rrdtool, collectd, cron, anacron, cron-apt, quota, php-xml,
  quotatool, whiptail, lvm2, watchdog, ca-certificates, perl, libjson-perl,
