--- a/deb/openmediavault-tftp/debian/control
+++ b/deb/openmediavault-tftp/debian/control
@@ -1,6 +1,6 @@
 Source: openmediavault-tftp
 Section: net
-XB-Plugin-Section: network
+XB-Plugin-Section: sharing
 Priority: optional
 Maintainer: Volker Theile <volker.theile@openmediavault.org>
 Build-Depends: debhelper (>> 7), gettext
