--- a/deb/Makefile
+++ b/deb/Makefile
@@ -4,7 +4,7 @@
 #
 # @license   http://www.gnu.org/licenses/gpl.html GPL Version 3
 # @author    Volker Theile <volker.theile@openmediavault.org>
-# @copyright Copyright (c) 2009-2016 Volker Theile
+# @copyright Copyright (c) 2009-2017 Volker Theile
 #
 # OpenMediaVault is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -30,4 +30,7 @@ clean binary omv_pull_po omv_push_pot omv_build_pot:
 		cd $(CURDIR)/$$dir && fakeroot debian/rules $@; \
 	done
 
-.PHONY: clean binary omv_pull_po omv_push_pot omv_build_pot
+install_build_tools:
+	sudo apt-get install debhelper fakeroot
+
+.PHONY: install_build_tools clean binary omv_pull_po omv_push_pot omv_build_pot
