Mantis 0001755: Outdated configuration of rsyslog.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault-nut/etc/rsyslog.d/openmediavault-nut.conf
+++ b/deb/openmediavault-nut/etc/rsyslog.d/openmediavault-nut.conf
@@ -2,4 +2,4 @@
 :programname, isequal, "upsmon" /var/log/nut.log
 :programname, isequal, "upssched" /var/log/nut.log
 :programname, isequal, "upssched-cmd" /var/log/nut.log
-& ~
+& stop
