--- a/deb/openmediavault/etc/rsyslog.d/openmediavault-pamtally2.conf
+++ b/deb/openmediavault/etc/rsyslog.d/openmediavault-pamtally2.conf
@@ -8,4 +8,4 @@ $ActionMailTo root
 $ActionMailSubject pamtally2MailSubject
 :msg, regex, "pam_tally2\(.*:auth\): user .* \([0-9]*\) tally [0-9]*, deny [0-9]*" :ommail:;pamtally2MailBody
 :msg, regex, "pam_tally2\(.*:auth\): user .* \([0-9]*\) tally [0-9]*, deny [0-9]*" /var/log/auth.log;pamtally2AuthMsg
-& ~
+& stop
