--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -23,7 +23,7 @@
 hostname = "omv4box"
 
 Vagrant.configure("2") do |config|
-	config.vm.box = "remram/debian-9-amd64"
+	config.vm.box = "debian/stretch64"
 	config.vm.define hostname
 	config.vm.provision :shell, :path => "install.sh"
 	config.vm.network "private_network", ip: "192.172.16.24"
