--- a/deb/openmediavault-clamav/debian/control
+++ b/deb/openmediavault-clamav/debian/control
@@ -9,8 +9,7 @@ Homepage: http://www.openmediavault.org
 
 Package: openmediavault-clamav
 Architecture: all
-Depends: openmediavault (>= 4.0), clamav-daemon, clamav-freshclam,
- clamdscan, init-system-helpers
+Depends: openmediavault (>= 4.0), clamav-daemon, clamav-freshclam, clamdscan
 Priority: optional
 Description: OpenMediaVault ClamAV plugin
  Clam AntiVirus is an anti-virus toolkit for Unix.
