Adapt to Debian 9 (Stretch).
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault-nut/debian/control
+++ b/deb/openmediavault-nut/debian/control
@@ -9,7 +9,7 @@ Homepage: http://www.openmediavault.org
 
 Package: openmediavault-nut
 Architecture: all
-Depends: openmediavault (>= 3.0.70), nut (>= 2.6.4), udev
+Depends: openmediavault (>= 4.0.4), nut, udev
 Priority: optional
 Description: OpenMediaVault Network UPS Tools (NUT) plugin
  Network UPS Tools (NUT) is a client/server monitoring system that
