Use lsb_release to get distro information.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -13,7 +13,7 @@ Depends: ${perl:Depends}, libjs-extjs6, php-fpm, libpam-modules, php-json,
  acl, ifenslave, resolvconf, iproute2, xfsprogs, jfsutils, ntfs-3g, hdparm,
  sdparm, ifupdown, mdadm, postfix, libsasl2-modules, bsd-mailx, python3-dbus,
  cpufrequtils, rsyslog, logrotate, smartmontools, openssl, openssh-server,
- uuid, tzdata, nfs-kernel-server, proftpd-basic,
+ uuid, tzdata, nfs-kernel-server, proftpd-basic, lsb-release,
  wget, util-linux, samba, samba-common-bin, rsync, apt-utils,
  snmpd, avahi-daemon, libnss-mdns, iptables, monit, acpid, beep, php-bcmath,
  gdisk, rrdtool, collectd, cron, anacron, cron-apt, quota, php-xml,
