--- a/deb/openmediavault/debian/control
+++ b/deb/openmediavault/debian/control
@@ -14,7 +14,7 @@ Depends: ${perl:Depends}, libjs-extjs6 (>= 6.2), php5-fpm, libpam-modules,
  sdparm, ifupdown, mdadm, postfix, libsasl2-modules, bsd-mailx, python3-dbus,
  cpufrequtils, rsyslog, logrotate, smartmontools, openssl, openssh-server,
  openssh-blacklist-extra, uuid, tzdata, nfs-kernel-server, proftpd-basic,
- wget, util-linux, samba, samba-common-bin, rsync, apt-utils,
+ wget, util-linux, samba, samba-common-bin, rsync, apt-utils, net-tools,
  snmpd, avahi-daemon, libnss-mdns, iptables, monit (>= 5.4), acpid, beep,
  gdisk, rrdtool, collectd (>= 5.1.0), cron, anacron, cron-apt, quota,
  quotatool, whiptail, lvm2, watchdog, ca-certificates, perl, libjson-perl,
